# catsc

./: .gitignore  .gitlab-ci.cern.yml  CMakeLists.txt  README.md  main-gpl-test-mult.cc  main-gpl-test.cc  main-test-hard.cc  parse_dbg.py
cmake/: catsc.pc.in  catscConfig.cmake  catscCreateConfig.cmake
doc/: test-graph-1
include/catsc/: cats.h  cats.hh  config.h.in
src/: cats.c  cats.cc
test/: main-gpl-mult.cc  main-gpl.cc  main-hard.cc  main-test.cc  parse_dbg.py  read.cc  test-1.txt  test-2.txt  test-3.txt  test-4.txt
